--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <!-- Для поддержки адаптивности -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>React App</title>
+    <title>RA-hw.-9-Router.-1-Menu.-2-CRUD.-3-Authentication</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
